# OOP_Chernyayev_K29

./: README.md  oop.code-workspace
lab1a/: CMakeLists.txt  README.md  main.cpp  uttt.cpp  uttt.h  uttt_test.cpp
lab1a/docs/: uttt.puml
